--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com -->
-  <title>Bootstrap Theme Company Page</title>
+  
+  <title>  Survey to change the World</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -189,7 +189,7 @@
       <br><button class="btn btn-default btn-lg" onclick="window.location.href='survey.html';" >Start the survey</button>
     </div>
     <div class="col-sm-4">
-      <img src="results.gif" style="width:600px;height:250px;" alt="results">
+      <img src="results.gif" style="width:541px;height:370px;" alt="results">
     </div>
   </div>
 </div>
