--- a/thankyou.html
+++ b/thankyou.html
@@ -55,7 +55,9 @@
     
    
         </div>
-     
+     <div class="embed-responsive embed-responsive-21by9">
+          <iframe class="embed-responsive-item" src="https://xeogl.org/examples/#importing_gltf_OfficePlan"></iframe>
+    </div>
 
     </body>
    
