--- a/survey.html
+++ b/survey.html
@@ -565,11 +565,11 @@
                                         </div>
 
                                         <div class="label-container">
-                                          <div class="label-slider">None</div>
                                           <div class="label-slider">1</div>
                                           <div class="label-slider">2</div>
                                           <div class="label-slider">3</div>
-                                          <div class="label-slider">4+</div>
+                                          <div class="label-slider">4</div>
+                                          <div class="label-slider">5</div>
                                         </div>
                                 
                                 </div>
