--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <li>How can your working environment be improved to enhance your well-being,
 motivation and performance?</li>
       </ul>  
-      <p  style="text-align:justify;"> Please Read following terms and Conditions to Take this survey.</p>
+      <p  style="text-align:justify;"> Please read following terms and conditions to take this survey.</p>
       <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="terms.html"></iframe>
     </div>
