--- a/thankyou.html
+++ b/thankyou.html
@@ -22,7 +22,7 @@
     </head>
 
     <body>
-    <div class="jumbotron text-center">
+    <div class="jumbotron text-center" style="width: 774px;">
           <h1 class="display-3">Thank You for filling out the form!</h1>
           
           <hr>
