--- a/terms.html
+++ b/terms.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 
-<div class="jumbotron text-center">
+<div class="jumbotron text-center" style="
+    height: 10px;
+    padding: 2rem 1rem;">
   <h4>Privacy statement (General Data Protection Regulation (GDPR)/ AVG)</h4>
   
 </div>
