--- a/survey.html
+++ b/survey.html
@@ -9,7 +9,7 @@
         <title></title>
 
         <!-- CSS -->
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" href="assets/css/form-elements.css">
@@ -461,14 +461,14 @@
                                         <table class="table">
                                               <thead>
                                                 <tr>
-                                                  <th scope="col">Traits</th>
-                                                  <th scope="col">Disagree strongly</th>
-                                                  <th scope="col">Disagree moderately</th>
-                                                  <th scope="col">Disagree a little</th>
-                                                  <th scope="col">Neither agree nor disagree</th>
-                                                  <th scope="col">Agree a little</th>
-                                                  <th scope="col">Agree moderately</th>
-                                                  <th scope="col">Agree strongly</th>
+                                                  <th scope="col" style="font-weight: 600;">Traits</th>
+                                                  <th scope="col" style="font-weight: 600;">Disagree strongly</th>
+                                                  <th scope="col" style="font-weight: 600;">Disagree moderately</th>
+                                                  <th scope="col" style="font-weight: 600;">Disagree a little</th>
+                                                  <th scope="col" style="font-weight: 600;">Neither agree nor disagree</th>
+                                                  <th scope="col" style="font-weight: 600;">Agree a little</th>
+                                                  <th scope="col" style="font-weight: 600;">Agree moderately</th>
+                                                  <th scope="col" style="font-weight: 600;">Agree strongly</th>
                                                 </tr>
                                               </thead>
                                               <tbody>
@@ -1290,12 +1290,12 @@
                                         <div class="table-responsive"> <table class="table">
                                               <thead>
                                                 <tr>
-                                                <th scope="col">Well-being factors</th>
-                                                  <th scope="col">Very unimportant</th>
-                                                  <th scope="col">Unimportant</th>
-                                                  <th scope="col">Neutral</th>
-                                                  <th scope="col">Important</th>
-                                                  <th scope="col">Very important</th>
+                                                <th scope="col" style="font-weight: 600;">Well-being factors</th>
+                                                  <th scope="col" style="font-weight: 600;">Very unimportant</th>
+                                                  <th scope="col" style="font-weight: 600;">Unimportant</th>
+                                                  <th scope="col" style="font-weight: 600;">Neutral</th>
+                                                  <th scope="col" style="font-weight: 600;">Important</th>
+                                                  <th scope="col" style="font-weight: 600;">Very important</th>
                                                   
                                                 </tr>
                                               </thead>
