--- a/survey.html
+++ b/survey.html
@@ -2273,7 +2273,7 @@
                                     
                             </div>
                             <div class="form-group">
-                                    <h5>7. What percentage of your weekly working time (100%) would you like to spend where?</h5><span><p  style="color: green;display: inline;font-size: 12px;margin-left: 20px"><i class="fa fa-info-circle"></i>  Use the scale to choose your preferred percentage of each workplace option – the sum of all should not exceed 100 %</p></span><p id="texerrk" style="display:none;color: red;font-size: 12px;" > <i class="fa fa-info-circle"></i> Please do not exceed more than 100%</p>
+                                    <h5>7. What percentage of your weekly working time (100%) would you like to spend where?</h5><span><p  style="color: green;display: inline;font-size: 12px;margin-left: 20px"><i class="fa fa-info-circle"></i>  Use the scale to choose your preferred percentage of each workplace option – the sum of all should not exceed 100 %</p></span><p id="texerrk" style="display:none;color: red;font-size: 12px;margin-left: 20px;" > <i class="fa fa-info-circle"></i> Please do not exceed more than 100%</p>
                                      
                                     <div class="row">
                                     <div class="col-sm-4" >
