--- a/survey.html
+++ b/survey.html
@@ -438,7 +438,9 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="row">
+                                    
                                     <h5 style="display: inline;">10. Please indicate how satisfied you are with your current working conditions? </h5><span>  <p  style="color: green;display: inline;font-size: 12px;margin-left: 20px"><i class="fa fa-info-circle"></i>  Use the scale to rate your level of satisfaction</p></span>
+                                     <div class="col-12 col-md-8">
                                      <div class="slider-container">
                                           <input type="range" min="1" max="5" class="slider" id="range1" name="satisfiedwork">
                                      </div>
@@ -448,6 +450,7 @@
                                         <div class="label-slider" style="padding-left: 59px;">Neutral</div>
                                         <div class="label-slider" style="padding-left: 89px;">Satisfied</div>
                                         <div class="label-slider" style="padding-left: 32px;">Very satisfied</div>
+                                    </div>
                                     </div>
                                     </div>
                                 </div>
