--- a/terms.html
+++ b/terms.html
@@ -31,7 +31,7 @@ text-align: left;
 </div>
   
 <div class="container">
-    <div class="row">
+    <div class="row" style="margin-left: 5px;margin-right: 5px;">
              
      
         <p  style="text-align:justify;">I declare that I am participating voluntarily in this study and that I am aware that at any
