--- a/survey.html
+++ b/survey.html
@@ -79,7 +79,7 @@ $(document).ready(function(){
                                 </div>
                                 <div class="form-group">
                                         <h5 style="display: inline;">2. Please indicate your age</h5><span>  <p  style="color: green;display: inline;font-size: 12px;margin-left: 20px"><i class="fa fa-info-circle"></i>  Please enter number in this field</p></span><p id="texerrage" style="display:none;color: red;font-size: 12px;" > <i class="fa fa-info-circle"></i> Please compleate all the parts</p>
-                                        <input type="text" class="form-control"  name="age" placeholder="Value"> 
+                                        <input type="text" class="form-control"   maxlength="2" onkeypress=" return isNumber(event)" name="age" placeholder="Value"> 
                                 </div>
                                 <div class="form-group"  >
                                         <h5 style="display: inline;">3. Please indicate your religion</h5><span> <p  style="color: green;display: inline;font-size: 12px;margin-left: 20px"><i class="fa fa-info-circle"></i>  Please choose one of the following answers</p></span>
@@ -774,13 +774,13 @@ $(document).ready(function(){
                                               <thead>
                                                 <tr>
                                                   <th scope="col" style="font-weight: 600;">Traits</th>
-                                                  <th scope="col" style="font-weight: 600;">Disagree strongly</th>
-                                                  <th scope="col" style="font-weight: 600;">Disagree moderately</th>
-                                                  <th scope="col" style="font-weight: 600;">Disagree a little</th>
-                                                  <th scope="col" style="font-weight: 600;">Neither agree nor disagree</th>
-                                                  <th scope="col" style="font-weight: 600;">Agree a little</th>
-                                                  <th scope="col" style="font-weight: 600;">Agree moderately</th>
-                                                  <th scope="col" style="font-weight: 600;">Agree strongly</th>
+                                                  <th scope="col" style="font-weight: 600;">1</th>
+                                                  <th scope="col" style="font-weight: 600;">2</th>
+                                                  <th scope="col" style="font-weight: 600;">3</th>
+                                                  <th scope="col" style="font-weight: 600;">4</th>
+                                                  <th scope="col" style="font-weight: 600;">5</th>
+                                                  <th scope="col" style="font-weight: 600;">6</th>
+                                                  <th scope="col" style="font-weight: 600;">7</th>
                                                 </tr>
                                               </thead>
                                               <tbody>
